--- a/main.css
+++ b/main.css
@@ -47,6 +47,16 @@ body {
     background-image: url('img/splash1.jpg');
 }
 
+.splash-small {
+	height: 200px;
+    width: 100%;
+    background-size: auto auto;
+    background-position: center;
+    background-repeat: no-repeat;
+	background-color: rgba(100,100,100,.3);
+    background-image: url('img/splash1.jpg');
+}
+
 .row-spacer {
 	height: 100px;
 }
@@ -55,6 +65,11 @@ body {
 	background-color: rgba(255,255,255,.5);
 	font-size: .9em;
 	border-radius: 5px;
+}
+
+.splash-small .splash-text {
+	margin-top: 80px;
+	background-color: rgba(255,255,255,.8);
 }
 
 .center-text {
@@ -247,6 +262,18 @@ p {
 	color: green;
 }
 
+.lightblue {
+	color: #388EFF;
+}
+
+.red {
+	color: #990033;
+}
+
+.centered {
+	text-align: center;
+}
+
 .blogpost {
 	border: solid 2px #DDDDDD;
 	border-radius: 10px;
@@ -256,4 +283,8 @@ p {
 
 .blogpost img {
 	max-width: 100%;
+}
+
+h5 a:hover {
+	text-decoration: none;
 }
