--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ body {
 	font-size: 1.4em;
 	color: #0F87FF;
 	padding-right: 10px;
-	cursor: default;
+	cursor: pointer;
 }
 
 .nav-link {
@@ -38,38 +38,39 @@ body {
 }
 
 .Splash {
-	height: 250px;
-    width: 100%;
-    background-size: auto auto;
-    background-position: center;
-    background-repeat: no-repeat;
+	height: 350px;
+  width: 100%;
+  background-size: auto auto;
+  background-position: center;
+  background-repeat: no-repeat;
 	background-color: rgba(100,100,100,.3);
-    background-image: url('img/splash1.jpg');
+  background-image: url('img/splash1.jpg');
 }
 
 .splash-small {
-	height: 200px;
-    width: 100%;
-    background-size: auto auto;
-    background-position: center;
-    background-repeat: no-repeat;
+	height: 150px;
+  width: 100%;
+  background-size: auto auto;
+  background-position: center;
+  background-repeat: no-repeat;
 	background-color: rgba(100,100,100,.3);
-    background-image: url('img/splash1.jpg');
+  background-image: url('img/splash1.jpg');
+}
+
+.splash-small .splash-text {
+	margin-top: 60px;
+
+	background-color: rgba(255,255,255,.8);
 }
 
 .row-spacer {
-	height: 80px;
+	height: 135px;
 }
 
 .splash-text {
 	background-color: rgba(255,255,255,.5);
 	font-size: .9em;
 	border-radius: 5px;
-}
-
-.splash-small .splash-text {
-	margin-top: 80px;
-	background-color: rgba(255,255,255,.8);
 }
 
 .center-text {
@@ -249,11 +250,27 @@ h5 a:hover {
 #show-filter {
   display: none;
 }
+
+#creator-img {
+  max-height: 300px;
+  text-align: center;
+}
+
+iframe {
+  width: 100%;
+  height: 400px;
+}
+
+#sort {
+  margin: 5px;
+}
 @media screen and (max-width: 768px) {
   .row-spacer {
     height: 30px;
   }
-
+  .Splash {
+    height: 250px;
+  }
   #search {
 		margin-left: 10%;
 		margin-right: 10%;
@@ -274,11 +291,26 @@ h5 a:hover {
 
   #show-filter {
     display: inherit;
-    width: 120px;
+    width: 34px;
+    padding: 4px;
     margin-left:20px;
     margin-top: 5px;
+    background-color: rgba(0,0,0,.1);
+    border-radius: 5px;
   }
   .hide-mobile {
     display: none;
   }
+
+  iframe {
+    height: 225px;
+  }
+
+  #sort {
+    position: fixed;
+    top: 43px;
+    right: 0px;
+    z-index: 1;
+  }
+
 }
